# aws-nitro-enclaves-nsm-node

./: Cargo.toml  LICENSE  README.md  index.d.ts  index.js  package.json
.github/workflows/: CI.yml
__test__/: index.spec.mjs
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
sample/: .gitignore  Dockerfile  build.sh  index.ts  package.json  run.sh
src/: lib.rs  nsm.rs  nsm_lib.rs  wrap.rs
