[package]
edition = "2021"
name = "aws-nitro-enclaves-nsm-node"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.0", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
aws-nitro-enclaves-nsm-api = "0.3.0"
serde_bytes = "0.11.9"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
